test/typecheck/pass/crlf.sail
/* Trivial example using CRLF line endings */

default Order dec
$include <prelude.sail>

val main : unit -> unit
function main() = ()
