test/typecheck/fail/invalid_function_val.sail
default Order dec

$include <prelude.sail>

val foo : unit <-> int

function foo() = 3
